<resources>
    <string name="app_name">weed api consume</string>
    <string name="startships">startships</string>
    <string name="vehicles">vehicles</string>
    <string name="characters">characters</string>
    <string name="planets">planets</string>
    <string name="url">Url</string>
    <string name="created">created</string>
    <string name="edited">edited</string>
    <string name="species">species</string>
    <string name="release">release</string>
    <string name="producer">producer</string>
    <string name="director">director</string>
    <string name="opening">opening</string>
    <string name="episode">episode</string>
    <string name="title">title</string>
</resources>